--- a/app/static/receptionist_add_style.css
+++ b/app/static/receptionist_add_style.css
@@ -344,7 +344,8 @@
     line-height: normal;
     text-align: left;
     margin-left: 2%;
-    margin-top: 2%
+    margin-top: 3%;
+    margin-bottom: 5%;
 }
 
 .doccare-success-modal-content button {
