--- a/app/templates/receptionist/appointment/appointment.html
+++ b/app/templates/receptionist/appointment/appointment.html
@@ -21,8 +21,8 @@
                         </h1>
                         <div class="doccare-input-group">
                             <input type="search" class="search-input" id="search-input" placeholder="Search"  aria-label="Search">
-                            <button class="search-icon" id="search-icon" type="button">
-                                <span class="material-symbols-outlined search">&#xe8b6;</span>
+                            <button type="search" class="search-icon" id="search-icon">
+                                <span class="material-symbols-outlined search">search</span>
                             </button>
                         </div>
                     </section>
