--- a/app/static/admin_style.css
+++ b/app/static/admin_style.css
@@ -73,6 +73,29 @@
     margin-right: 2%;
 }
 
+.update-icon {
+    top: 40px;
+    right: 105px;
+    width: 35px;
+    border-radius: 5px;
+    z-index: 1;
+    position: fixed;
+    cursor: pointer;
+}
+
+.update-icon.details {
+    right: 90px;
+}
+
+.update-icon.test {
+    position: absolute;
+    right: 17px;
+    top: 1600px;
+}
+
+.update-icon:active {
+    transform: translateY(1px);
+}
 
 /* -------------------------------------------- USER TABLE -------------------------------------------- */
 
@@ -104,6 +127,7 @@
     justify-content: center;
 }
 
+
 /* -------------------------------------------- USER INFORMATION-------------------------------------------- */
 
 /* --------------------------- BACK ICON ---------------------------- */
@@ -119,7 +143,7 @@
     transform: translateX(2px);
 }
 
-/* -------------------------------------------- PATIENT DETAILS NAVBAR -------------------------------------------- */
+/* --------------------------- PATIENT DETAILS NAVBAR ---------------------------- */
 .nav-underline {
     display: flex;
     margin-right: 150px;
