--- a/app/templates/admin/user_management/user_info.html
+++ b/app/templates/admin/user_management/user_info.html
@@ -68,20 +68,7 @@
         <div class="user-bg">
             <div class="group-info">
 
-                <div class="p_row firstRow">
-                    
-                    <div class="inputBox username">
-                        <input type="text" required="required" name="username" value="{{ user[1] }}" disabled>
-                        <span>USERNAME</span>
-                    </div>
-                    <div class="inputBox password">
-                        <input type="text" required="required" name="password" value="{{ user[2] }}" disabled>
-                        <span>PASSWORD</span>
-                    </div>
-
-                </div>
-
-                <div class="p_row secondRow">
+                <div class="u_row firstRow">
 
                     <div class="inputBox fName">
                         <input type="text" required="required" name="first_name" value="{{ user[3] }}" disabled>
@@ -95,10 +82,16 @@
                         <input type="text" required="required" name="last_name" value="{{ user[5] }}" disabled>
                         <span>LAST NAME</span>
                     </div>
-
+                    
                 </div>
 
-                <div class="u_row thirdRow">
+                <div class="u_row secondRow">
+
+                    <div class="inputBox username">
+                        <input type="text" required="required" name="username" value="{{ user[1] }}" disabled>
+                        <span>USERNAME</span>
+                    </div>
+
                     <div class="inputBox gender">
                         <select class="gender" name="gender" required="required" disabled>
                             <option value="" disabled selected></option>
@@ -106,6 +99,15 @@
                             <option value="female" {% if user[6] == "female" %} selected {% endif %}>Female</option>
                         </select>
                         <span>Gender</span>
+                    </div>
+
+                </div>
+
+                <div class="u_row thirdRow">
+
+                    <div class="inputBox password">
+                        <input type="text" required="required" name="password" value="{{ user[2] }}" disabled>
+                        <span>PASSWORD</span>
                     </div>
 
                     <div class="inputBox user_role">
@@ -118,6 +120,7 @@
                         </select>
                         <span>User Role</span>
                     </div>
+
                 </div>
 
             </div>
