--- a/app/templates/receptionist/dashboard.html
+++ b/app/templates/receptionist/dashboard.html
@@ -57,28 +57,15 @@
             </div>
             <div class="greetings">
                 <p>Have a nice day at work!</p>
-            </div>
+            </div>  
         </div>
-    </main>
-    <!-- <main>
-        
         <p class="date-time" id="demo"></p>
-        <a href="#">
-            <div class="add-icon">
-                <img src="{{ url_for('static', filename='images/Add Appointment.png') }}">
-            </div>
-        </a>
-        <a href="#">
-            <div class="reschedule-icon">
-                <img src="{{ url_for('static', filename='images/Reschedule Appointment.png') }}">
-            </div>
-        </a>
-        <a href="#">
-            <div class="cancel-icon">
-                <img src="{{ url_for('static', filename='images/Cancel Appointment.png') }}">
-            </div>
-        </a>
-    </main> -->
+        <ul class="appointment-nav">
+            <li class="appointment">BOOK AN APPOINTMENT</li>
+            <li class="appointment">RESCHEDULE APPOINTMENT</li>
+            <li class="appointment">CANCEL APPOINTMENT</li>
+        </ul> 
+    </main> 
 
     <script>
         // TO DISPLAY THE DATE
