--- a/app/templates/receptionist/appointment/appointment.html
+++ b/app/templates/receptionist/appointment/appointment.html
@@ -57,6 +57,7 @@
                                         <td class="doccare-reference-number"> {{ row.reference_number }} </td>
                                         <td> {{ row.date_appointment }} </td>
                                         <td> {{ row.time_appointment }} </td>
+                                        <td> {{ row.last_name}} </td>
                                         <td> 
                                             <div class="status-cell">
                                                 <p class="status">
@@ -71,9 +72,12 @@
                                             <a href="{{ url_for('receptionist.reschedule', reference_number=row.reference_number) }}" class="doccare-edit-appoinment-icon">
                                                 <span class="material-symbols-outlined">edit</span>
                                             </a>
-                                            <button type="button" class="delete-appoinment-button" data-id="{{ row.reference_number }}" onclick="openDeleteModal('{{ row[0] }}')">
+                                            <button type="button" class="cancel-appoinment-button" data-id="{{ row.reference_number }}" onclick="openCancelModal('{{ row.reference_number }}')">
+                                                <span class="material-symbols-outlined cancel-icon">event_busy</span>
+                                            </button>
+                                            <button type="button" class="delete-appoinment-button" data-id="{{ row.reference_number }}" onclick="openDeleteModal('{{ row.reference_number }}')">
                                                 <span class="material-symbols-outlined delete-icon">delete</span>
-                                            </button>                                            
+                                            </button>
                                         </td>
                                     </tr>
                                 {% endfor %}
@@ -110,87 +114,26 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Modal for Cancel Confirmation -->
+                    <div id="cancelModal" class="modal">
+                        <div class="modal-content">
+                            <p>Are you sure you want to cancel this appointment?</p>
+                            <div class="modal-buttons">
+                                <button class="cancellation-modal-button" id="cancellation-modal-button" onclick="cancelAppointment()">Yes, cancel it!</button>
+                                <button class="back-modal-button" id="back-modal-button">Back</button>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <a href="{{ url_for('receptionist.add_appointment') }}" class="doccare-add-appointment-icon" type="button" id="add-appointment-button">
                         <span class="material-symbols-outlined add-icon">&#xe147;</span>
                     </a>
                      <!-- Include these script tags at the end of the body content -->
                      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
                      <script src="{{ url_for('static', filename='receptionist_script.js') }}" defer></script>
-                     <script src="{{ url_for('static', filename='logout.js') }}"></script>
-                     <script>
-                        document.addEventListener("DOMContentLoaded", function () {
-                            const filterSelect = document.getElementById("filter-select");
-                            const rows = document.querySelectorAll(".doccare-table-appointment-content tbody tr");
-                            
-                            filterSelect.addEventListener("change", function () {
-                                const selectedValue = filterSelect.value.toUpperCase();
-                        
-                                rows.forEach(function (row) {
-                                    const statusCell = row.querySelector(".status-cell strong");
-                                    const status = statusCell.innerText.toUpperCase();
-                        
-                                    if (selectedValue === "ALL" || status === selectedValue) {
-                                        row.style.display = "";
-                                    } else {
-                                        row.style.display = "none";
-                                    }
-                                });
-                        
-                            });
-                        });
-                        
-                        
-                        $("#search-icon").click(function () {
-                            // Get the search term from the input field
-                            const searchTerm = $("#search-input").val();
-                            
-                            // Get the selected filter option
-                            const filterBy = $("#filter-select").val();
-
-                            // Make an AJAX request to the search endpoint
-                            $.ajax({
-                                type: "POST",
-                                url: "/receptionist/search-appointments/",
-                                headers: {
-                                    "X-CSRFToken": "{{ csrf_token() }}", // Include the CSRF token in the headers
-                                },
-                                data: JSON.stringify({ searchTerm: searchTerm, filterBy: filterBy }),
-                                contentType: "application/json", // Set content type to JSON
-                                success: function (data) {
-                                    // Update the table with the new data
-                                    updateTableWithData(data);
-                                },
-                                error: function (error) {
-                                    console.error("Error while making the search request:", error);
-                                    alert("Error while making the search request. Please check the server response.");
-                                },
-                            });
-                        });
-
-                        // Function to update the table with new data
-                        function updateTableWithData(data) {
-                            // Get the table body element
-                            var tableBody = $("tbody");
-
-                            // Clear existing rows
-                            tableBody.empty();
-
-                            // Iterate over the data and append new rows to the table
-                            for (var i = 0; i < data.length; i++) {
-                                var row = data[i];
-                                var newRow = $("<tr>");
-                                newRow.append("<td class='doccare-reference-number'>" + row.reference_number + "</td>");
-                                newRow.append("<td>" + row.date_appointment + "</td>");
-                                newRow.append("<td>" + row.time_appointment + "</td>");
-                                newRow.append("<td><div class='status-cell'><p class='status'><strong>" + row.status_ + "</strong></p></div></td>");
-                                newRow.append("<td class='table__cell'><a href='/receptionist/view_appointment?reference_number=" + row.reference_number + "' class='doccare-view-appoinment-icon'><span class='material-symbols-outlined'>info</span></a><a href='/receptionist/reschedule?reference_number=" + row.reference_number + "' class='doccare-edit-appoinment-icon'><span class='material-symbols-outlined'>edit</span></a><button type='button' class='delete-appoinment-button' data-id='" + row.reference_number + "' onclick='openDeleteModal(" + row.reference_number + ")'><span class='material-symbols-outlined delete-icon'>delete</span></button></td>");
-
-                                // Append the new row to the table body
-                                tableBody.append(newRow);
-                            }
-                        }
-                    </script>               
+                     <script src="{{ url_for('static', filename='logout.js') }}"></script>               
                 </main>
             </div>
         </body>
