--- a/app/templates/receptionist/appointment/appointment.html
+++ b/app/templates/receptionist/appointment/appointment.html
@@ -15,30 +15,32 @@
         <body class="appointment_body">
             <div class="container"> 
                 <main class="doccare-appointment-table">
-                    <section class="table__header__appointment">
-                        <h1> 
-                            <strong> APPOINTMENT </strong> 
-                        </h1>
-                        <div class="doccare-input-group">
-                            <input type="search" class="search-input" id="search-input" placeholder="Search"  aria-label="Search">
-                            <button type="search" class="search-icon" id="search-icon">
-                                <span class="material-symbols-outlined search">search</span>
-                            </button>
-                        </div>
-                    </section>
-                    <section class="appointment_entries">
-                    <!--<hr width="100%" color="blue"> -->
-                        </br>  
-                        <label for="filter-select">Filter Status by: </label>
-                        <select id="filter-select" name="filter-select" class="filter-select">
-                            <option value="ALL">ALL</option>
-                            <option value="PENDING">PENDING</option>
-                            <option value="DONE">DONE</option>
-                            <option value="CANCELLED">CANCELLED</option>
-                            <option value="SCHEDULED">SCHEDULED</option>
-                            <option value="RESCHEDULED">RESCHEDULED</option>
-                        </select> 
-                    </section>
+                    <form id="search-form" role="search">
+                        <section class="table__header__appointment">
+                            <h1> 
+                                <strong> APPOINTMENT </strong> 
+                            </h1>
+                            <div class="doccare-input-group">
+                                <input type="search" class="search-input" id="search-input" placeholder="Search" aria-label="Search">
+                                <button type="search" class="search-icon" id="search-icon">
+                                    <span class="material-symbols-outlined search">search</span>
+                                </button>
+                            </div>
+                        </section>
+                        <section class="appointment_entries">
+                        <!--<hr width="100%" color="blue"> -->
+                            </br>  
+                            <label for="filter-select">Filter Status by: </label>
+                            <select id="filter-select" name="filter-select" class="filter-select">
+                                <option value="all">ALL</option>
+                                <option value="reference_number">REFERENCE NUMBER</option>
+                                <option value="date_appointment">DATE</option>
+                                <option value="time_appointment">TIME</option>
+                                <option value="last_name">LAST NAME</option>
+                                <option value="status_">STATUS</option>
+                            </select> 
+                        </section>
+                    </form>
                     <section class="doccare-table-appointment-content">
                         <table>
                             <thead>
@@ -130,10 +132,10 @@
                         <span class="material-symbols-outlined add-icon">&#xe147;</span>
                     </a>
                      <!-- Include these script tags at the end of the body content -->
-                     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+                     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
                      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
                      <script src="{{ url_for('static', filename='receptionist_script.js') }}" defer></script>
-                     <script src="{{ url_for('static', filename='logout.js') }}"></script>               
+                     <script src="{{ url_for('static', filename='logout.js') }}"></script>              
                 </main>
             </div>
         </body>
